--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -346,7 +346,7 @@
                                                                                             <center style="width: 100%; min-width: 580px;">
                                                                                                     <p style="font-size: 12px; color: #999999; font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; margin: 0 0 10px; padding: 0;" align="center">
                                                                                                             Sent by <a href="{{link}}" style="color: #E67612; text-decoration: none;">Grafana v9.5.19</a>
-                                                                                                            <br />© 2024 BSS_OMD_devMonTools@nexign.com
+                                                                                                            <br />© 2024 Andrey Stepankin privales1@yandex.ru
                                                                                                     </p>
                                                                                             </center>
                                                                                     </td>
